syntax = "proto3";

package analytics.service.v1;

option go_package = "github.com/sashapremium/events/analytics/internal/pb/analytics_api;analytics_api";

import "google/api/annotations.proto";
import "models/analytics_model.proto";

service AnalyticsService {
  rpc GetPostStats(GetPostStatsRequest) returns (GetPostStatsResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/post/{post_id}"
    };
  }

  rpc GetTop(GetTopRequest) returns (GetTopResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/top"
    };
  }

  rpc GetAuthorStats(GetAuthorStatsRequest) returns (GetAuthorStatsResponse) {
    option (google.api.http) = {
      get: "/api/v1/analytics/author/{author_id}"
    };
  }
}

message GetPostStatsRequest {
  uint64 post_id = 1;
  bool fresh = 2;
}

message GetPostStatsResponse {
  analytics.models.v1.PostStatsModel stats = 1;
}

message GetTopRequest {
  string metric = 1;
  uint32 limit = 2;
}

message GetTopResponse {
  analytics.models.v1.TopModel top = 1;
}

message GetAuthorStatsRequest {
  string author_id = 1;
}

message GetAuthorStatsResponse {
  analytics.models.v1.AuthorStatsModel stats = 1;
}
