syntax = "proto3";

package analytics.models.v1;

option go_package = "github.com/sashapremium/events/internal/pb/models;models";


// Итоговые агрегаты по посту
message TotalsModel {
  int64 total_views    = 1;
  int64 total_likes    = 2;
  int64 total_comments = 3;
  int64 total_reposts  = 4;
  int64 unique_users   = 5;
}

// Свежий хвост из Redis
message FreshTailModel {
  int64 views        = 1;
  int64 likes        = 2;
  int64 comments     = 3;
  int64 reposts      = 4;
  int64 unique_users = 5;
}

//Cстатистика по посту
message PostStatsModel {
  uint64 post_id = 1;
  TotalsModel totals = 2;
  FreshTailModel fresh_tail = 3;
  string last_synced_at = 4; // RFC3339
}

// Элемент топа
message TopItemModel {
  uint64 post_id = 1;
  int64 value = 2;
}

//Топ постов
message TopModel {
  string metric = 1;              // просмотр, комментарии, лайки
  repeated TopItemModel items = 2;
}

//Аналитика по автору
message AuthorStatsModel {
  string author_id = 1;
  uint64 posts = 2;
  int64 total_views = 3;
  int64 total_likes = 4;
  int64 total_comments = 5;
  int64 total_reposts = 6;
}
