syntax = "proto3";

package content.models.v1;

option go_package = "github.com/sashapremium/events/internal/pb/models;models";

message PostModel {
  uint64 id           = 1;
  string title        = 2;
  string author_id    = 3;
  string category     = 4;
  string content      = 5;
  string published_at = 6;
}

message CommentModel {
  uint64 id         = 1;
  uint64 post_id    = 2;
  string user_hash  = 3;
  string text       = 4;
  string created_at = 5;
}
